# VAST

./: config.yaml  pyproject.toml  test.ipynb
vast/: keyframe_extractor.py  narration_generator.py  pipeline.py  scene_analyzer.py  scene_segmenter.py  subtitle_generator.py  text_summarizer.py  utils.py  video_downloader.py
vast/keyframe_extractor/: camerashot_detector.py
